crates/elif-core-derive/tests/ui/fail/invalid_field_type.rs
use elif_core_derive::injectable;

#[injectable]
pub struct UserService {
    invalid_field: String, // Should be Arc<T> or Option<Arc<T>>
}

fn main() {}